# RetroTUIGames

./: Cargo.toml  README.md
src/: achievements.rs  leaderboard.rs  lib.rs  main.rs  profile.rs  save.rs  settings.rs
src/engine/: animation.rs  audio.rs  events.rs  input.rs  layout.rs  mod.rs  renderer.rs  resources.rs  scene.rs  theme.rs  timing.rs
src/games/: breakout.rs  chess.rs  game2048.rs  minesweeper.rs  mod.rs  pong.rs  snake.rs  sudoku.rs  tetris.rs
src/ui/: menu.rs  mod.rs
