[package]
name = "retrohub"
version = "1.0.0"
edition = "2021"
description = "A retro game hub running in your terminal"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
color-eyre = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
